# ROS-Self-service-checkout-system

./: README.md  operation INSTRUCTION.txt
self_checkout_system/: CMakeLists.txt  package.xml
self_checkout_system/launch/: self_checkout.launch
self_checkout_system/nodes/: checkout_logic_node.py  tts_node.py  yolo_detect_node.py
self_checkout_system/scripts/: price_config.py
self_checkout_system/webapp/: app.py  config.py  requirements.txt
self_checkout_system/webapp/services/: detection_service.py  pricing_service.py  tts_service.py
